--- a/classification_model/config.yml
+++ b/classification_model/config.yml
@@ -14,14 +14,14 @@ pipeline_save_file: classification_model_output_v
 
 features:
   - Pclass
-  # - Sex
-  # - Age
-  # - SibSp
-  # - Parch
-  # - Ticket
-  # - Fare
-  # - Cabin
-  # - Embarked
+  - Sex
+  - Age
+  - SibSp
+  - Parch
+  - Fare
+  - Cabin
+  - Embarked
+  - Title  # generated from name
 
 # set train/test split
 test_size: 0.1
@@ -32,97 +32,15 @@ random_state: 42
 # Inverse of regularization strength
 C: 0.0005
 
-# categorical variables with NA in train set
-# categorical_vars_with_na_frequent:
-#   - BsmtQual
-#   - BsmtExposure
-#   - BsmtFinType1
-#   - GarageFinish
+numerical_vars:
+  - Age
+  - Fare
 
-# categorical_vars_with_na_missing:
-#   - FireplaceQu
+categorical_vars:
+  - Sex
+  - Cabin
+  - Embarked
+  - Title
 
-# numerical_vars_with_na:
-#   - LotFrontage
-
-# temporal_vars:
-#   - YearRemodAdd
-
-# ref_var: YrSold
-
-
-# # variables to log transform
-# numericals_log_vars:
-#   - LotFrontage
-#   - FirstFlrSF
-#   - GrLivArea
-
-# binarize_vars:
-#   - ScreenPorch
-
-# # variables to map
-# qual_vars:
-#   - ExterQual
-#   - BsmtQual
-#   - HeatingQC
-#   - KitchenQual
-#   - FireplaceQu
-
-# exposure_vars:
-#   - BsmtExposure
-
-# finish_vars:
-#   - BsmtFinType1
-
-# garage_vars:
-#   - GarageFinish
-
-# categorical_vars:
-#   - MSSubClass
-#   - MSZoning
-#   - LotShape
-#   - LandContour
-#   - LotConfig
-#   - Neighborhood
-#   - RoofStyle
-#   - Exterior1st
-#   - Foundation
-#   - CentralAir
-#   - Functional
-#   - PavedDrive
-#   - SaleCondition
-
-# # variable mappings
-# qual_mappings:
-#   Po: 1
-#   Fa: 2
-#   TA: 3
-#   Gd: 4
-#   Ex: 5
-#   Missing: 0
-#   NA: 0
-
-# exposure_mappings:
-#   No: 1
-#   Mn: 2
-#   Av: 3
-#   Gd: 4
-
-
-# finish_mappings:
-#   Missing: 0
-#   NA: 0
-#   Unf: 1
-#   LwQ: 2
-#   Rec: 3
-#   BLQ: 4
-#   ALQ: 5
-#   GLQ: 6
-
-
-# garage_mappings:
-#   Missing: 0
-#   NA: 0
-#   Unf: 1
-#   RFn: 2
-#   Fin: 3
+cabin_vars:
+  - Cabin
